tests/jastadd/negative/name_errors/L4/3_RecordDecl2.ob
MODULE TestModule;
	VAR a : RECORD
				a, a : INTEGER
			END;
END TestModule.
